feat: magic up a website

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,11 +1,17 @@
 <!doctype html>
 <html>
   <head>
-    <title>Hello, World!</title>
-    <meta name="description" content="Our first page">
-    <meta name="keywords" content="html tutorial template">
+    <title>Catherine is the best director</title>
+    <meta name="description" content="This is just goofery">
   </head>
   <body>
-    <h2>Hello, World!</h2>
+    <header>
+      <h1>Catherine's Cool Website</h1>
+    </header>
+    <main>
+      <div class="image-container">
+        <img src="images/bohki.png" alt="Bohki, a magicical speckled hen, lifts a skull above her head. The skull is alight with green flame." />
+      </div>
+    </main>
   </body>
 </html>
